[gd_scene load_steps=24 format=3 uid="uid://bmlhwftb5qas1"]

[ext_resource type="Script" uid="uid://dgbaeabass3dy" path="res://scripts/actors/enemies/skeleton/skeleton.gd" id="1_k5xu1"]
[ext_resource type="Shader" uid="uid://dvfjf0rl65ehj" path="res://shaders/blink.gdshader" id="2_ahxvp"]
[ext_resource type="Texture2D" uid="uid://bdgxxhuu2mpn8" path="res://assets/sprite/actors/enemies/skeleton/skeleton.png" id="2_ajadi"]
[ext_resource type="PackedScene" uid="uid://tu8uiu8q5bpe" path="res://scenes/ui/actors/healthbar.tscn" id="2_q5xls"]
[ext_resource type="FontFile" uid="uid://c1l47aekqn13v" path="res://assets/fonts/m3x6.ttf" id="3_4vvw8"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="3_pxf5o"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="4_gsx3i"]
[ext_resource type="Script" uid="uid://byrgwv2o7hstx" path="res://addons/netfox.extras/state-machine/rewindable-state-machine.gd" id="5_4vvw8"]
[ext_resource type="Script" uid="uid://c21kfbic5p050" path="res://scripts/actors/enemies/skeleton/statemachine/idle.gd" id="6_gsx3i"]
[ext_resource type="AudioStream" uid="uid://6xxklhojohtt" path="res://assets/audio/effects/sci-fi/impactMetal_002.ogg" id="6_lokys"]
[ext_resource type="Script" uid="uid://kcr5vhn6ovlb" path="res://scripts/actors/enemies/skeleton/statemachine/chase.gd" id="7_4vvw8"]
[ext_resource type="Script" uid="uid://bhbif8ou5lwk8" path="res://scripts/actors/enemies/skeleton/statemachine/attack.gd" id="10_htkro"]
[ext_resource type="Script" uid="uid://bu3laamvy457f" path="res://scripts/actors/enemies/skeleton/statemachine/die.gd" id="13_0l1ge"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ajadi"]
radius = 16.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_htkro"]
radius = 20.0
height = 44.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0l1ge"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ytsm5"]
radius = 128.062

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lokys"]
shader = ExtResource("2_ahxvp")
shader_parameter/blink_color = Color(1, 0, 0, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="Animation" id="Animation_htkro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lokys"]
resource_name = "skeleton_die"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_ajadi"]
resource_name = "skeleton_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ahxvp"]
resource_name = "skeleton_walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ahxvp"]
_data = {
&"RESET": SubResource("Animation_htkro"),
&"skeleton_die": SubResource("Animation_lokys"),
&"skeleton_idle": SubResource("Animation_ajadi"),
&"skeleton_walk": SubResource("Animation_ahxvp")
}

[node name="skeleton" type="CharacterBody2D" node_paths=PackedStringArray("state_machine")]
collision_layer = 4
collision_mask = 13
script = ExtResource("1_k5xu1")
acceleration = 3.0
deceleration = 3.0
attack_range = 35.0
state_machine = NodePath("RewindableStateMachine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_ajadi")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_htkro")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_0l1ge")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_ytsm5")

[node name="visual" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="visual"]
material = SubResource("ShaderMaterial_lokys")
texture = ExtResource("2_ajadi")
hframes = 6

[node name="healthbar" parent="visual" instance=ExtResource("2_q5xls")]
offset_left = -16.0
offset_top = -28.0
offset_right = 16.0
offset_bottom = -24.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="visual"]
libraries = {
&"": SubResource("AnimationLibrary_ahxvp")
}
autoplay = "skeleton_idle"

[node name="VBoxContainer" type="VBoxContainer" parent="visual"]
offset_left = -16.0
offset_top = -88.0
offset_right = 30.0
offset_bottom = -32.0

[node name="state_label" type="Label" parent="visual/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4vvw8")
theme_override_font_sizes/font_size = 32
text = "state"

[node name="health_label" type="Label" parent="visual/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_4vvw8")
theme_override_font_sizes/font_size = 32
text = "health"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lokys")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
simplify_path = true
debug_enabled = true
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 9

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("3_pxf5o")
root = NodePath("..")
state_properties = Array[String]([":position", ":health", "RewindableStateMachine:state"])
metadata/_custom_type_script = "uid://d350u8evihs1u"

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_gsx3i")
root = NodePath("..")
properties = Array[String]([":position"])
metadata/_custom_type_script = "uid://dour8fehaaugp"

[node name="RewindableStateMachine" type="Node" parent="."]
script = ExtResource("5_4vvw8")
metadata/_custom_type_script = "uid://byrgwv2o7hstx"

[node name="IDLE" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("character_body_2d", "animation_player")]
script = ExtResource("6_gsx3i")
character_body_2d = NodePath("../..")
animation_player = NodePath("../../visual/AnimationPlayer")
metadata/_custom_type_script = "uid://usyufdtn83hc"

[node name="CHASE" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("character_body_2d", "animation_player", "navigation_agent_2d")]
script = ExtResource("7_4vvw8")
character_body_2d = NodePath("../..")
animation_player = NodePath("../../visual/AnimationPlayer")
navigation_agent_2d = NodePath("../../NavigationAgent2D")
metadata/_custom_type_script = "uid://usyufdtn83hc"

[node name="ATTACK" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("character_body_2d", "animation_player")]
script = ExtResource("10_htkro")
character_body_2d = NodePath("../..")
animation_player = NodePath("../../visual/AnimationPlayer")
shove_force = 150.0
metadata/_custom_type_script = "uid://usyufdtn83hc"

[node name="DIE" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("character_body_2d", "animation_player")]
script = ExtResource("13_0l1ge")
character_body_2d = NodePath("../..")
animation_player = NodePath("../../visual/AnimationPlayer")
metadata/_custom_type_script = "uid://usyufdtn83hc"
